overflowing buttons should get greater widths (bug 846532)

--- a/hearth/media/css/desktop-details.styl
+++ b/hearth/media/css/desktop-details.styl
@@ -40,19 +40,6 @@ body[data-page-type=leaf] {
             }
         }
     }
-    .infobox {
-        > div {
-            padding: 20px;
-        }
-        ul.c {
-            margin: -5px;
-            li {
-                margin: 0;
-                width: 25%;
-                padding: 5px;
-            }
-        }
-    }
 }
 
 // Chrome fix. This seems to be the reflow issue: http://is.gd/d06sTY
